# tapestry

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bootstrap.mk  c-silver.py  install.sh  silver-c.py  tapestry  tapestry-shared.c  tapestry.c  tapestry.h
include/: A-init  A-intern  A-methods  A-public  A-reserve  tapestry  tapestry-init  tapestry-intern  tapestry-public
std-draft/: ion.ta  module.ta
tapestry/: object.cpp  object.hpp  tapestry.cpp  tapestry.hpp
